Bug 1285987: Narrow the workaround added in bug 1276184 to only be effective with webm. r=gerald

Some invalid streams incorrectly tag all frames as keyframes, which cause the frames to be inserted in the wrong order in the trackbuffer.

MozReview-Commit-ID: EZurdiMxmle